--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "type": "module",
     "main": "index.js",
     "scripts": {
-        "test": "vitest"
+        "test": "vitest",
+        "build": "tsc"
     },
     "devDependencies": {
         "@types/node": "^22.15.30",
