--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "devDependencies": {
         "@types/node": "^22.15.30",
         "typescript": "^5.8.3",
-        "vite": "^6.3.5",
-        "vitest": "^3.2.0"
+        "vite": "^6.3.5"
     }
 }
